<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb</name>
  <version>0.0.0</version>
  <description>publishing messages from uwb</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>agent_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend> <!-- pyserial -->
  <exec_depend>python3-scipy</exec_depend>  <!-- scipy    -->
  <!-- 
    Check:
    - [Usage of `rosdep`]( http://docs.ros.org/en/independent/api/rosdep/html/commands.html )
    - [Keys to fill in <depend>]( https://github.com/ros/rosdistro/tree/master/rosdep/ )

    To list dependencies, run `rosdep keys -\-from-paths ./src` (remove the '\' before execution).
    To install deps, run `rosdep install -\-from-paths ./src -\-ignore-src` (remove the '\').

    Explanation:
    - Arg `-\-from-paths` indicates that the packages to resolve deps for are in the local path
    - Arg `-\-ignore-src` hint rosdep also to check the local folder for deps, which may also
      being installing
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
